--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ serde = "1.0.76"
 serde_json = "1.0.26"
 serde_derive = "1.0.76"
 
-crossbeam = "0.4.1"
 atomic-option = "0.1.2"
+
+lazy_static = "1.1.0"
 
 [profile.release]
 lto = true
